# image-processor-for-shrimp

./: README.md  main.spec  pyproject.toml
.github/workflows/: build.yml
image_processor_for_shrimp/: __main__.py
